force-app/main/default/objects/Integration_Log__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate</label>
    <referenceTo>Certificate__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>