force-app/main/default/objects/Integration_Log__c/fields/End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Point_URL__c</fullName>
    <label>End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>