force-app/main/default/objects/Integration_Log__c/fields/JSON_Body__c.field-meta.xml
<CustomField>
    <fullName>JSON_Body__c</fullName>
    <label>JSON Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>