force-app/main/default/objects/Integration_Log__c/fields/Opportunity_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Certificate</label>
    <referenceTo>Opportunity_Certificate__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>