force-app/main/default/objects/Integration_Log__c/fields/Payment_Activity__c.field-meta.xml
<CustomField>
    <fullName>Payment_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Activity</label>
    <referenceTo>fw1__Payment_Activity__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>