force-app/main/default/objects/Integration_Log__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>SCS_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>