force-app/main/default/objects/Integration_Log__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>