force-app/main/default/objects/Integration_Log__c/fields/Site_Covered__c.field-meta.xml
<CustomField>
    <fullName>Site_Covered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Covered</label>
    <referenceTo>Site_Covered__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>