force-app/main/default/objects/Integration_Log__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard</label>
    <referenceTo>Standard__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>