force-app/main/default/objects/Integration_Log__c/listViews/Latest.listView-meta.xml
<ListView>
    <fullName>Latest</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Status__c</field>
        <operation>notContain</operation>
        <value>Ok</value>
    </filters>
    <label>Latest</label>
</ListView>